--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/markdownit": "^1.2.10",
     "graphql": "^15.3.0",
-    "nuxt": "^2.14.0"
+    "nuxt": "^2.14.0",
+    "prismjs": "^1.21.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
