--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.0",
+    "moment": "^2.29.1",
     "nuxt": "^2.14.0",
     "prismjs": "^1.21.0"
   },
