--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/recaptcha": "^0.6.2",
+    "@nuxtjs/sitemap": "^2.4.0",
     "moment": "^2.29.1",
     "nuxt": "^2.14.0",
     "prismjs": "^1.22.0"
