--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.0",
+    "@nuxtjs/component-cache": "^1.1.6",
     "@nuxtjs/recaptcha": "^0.6.2",
     "@nuxtjs/sitemap": "^2.4.0",
     "moment": "^2.29.1",
