--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-analytics": "^2.4.0",
+    "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/tailwindcss": "^4.1.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.5.0",
