--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-lottie": "^0.2.1"
   },
   "devDependencies": {
+    "@nuxt/image": "^0.4.12",
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-analytics": "^2.4.0",
