--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/color-mode": "^3.1.8",
+    "@nuxtjs/tailwindcss": "^6.1.3",
     "nuxt": "3.0.0"
   }
 }
